--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,15 @@
-<h2>Available drones</h2>
+<div>
+
+  <h3>
+    Avalaible Drones
+  </h3>
+
+  {{#each listDrone}}
+
+    <h4>{{name}}</h4>
+    <p>{{propellers}}</p>
+    <p>{{maxSpeed}}</p>
+
+  {{/each}}
+
+</div>
