--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -6,7 +6,7 @@
 
   {{#each listDrone}}
 
-    <h4>{{name}}</h4>
+    <a href="/drones/{{_id}}/edit"><h4>{{name}}</h4></a>
     <p>{{propellers}}</p>
     <p>{{maxSpeed}}</p>
 
