--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/drones">Drones</a>
+      <a href="/drones/create">Create Drone</a>
     </nav>
 
 
