--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,29 @@
+
+<div>
+
+
 <h2>Create a new drone</h2>
+
+
+  <form action="/create" method="post">
+
+    <label for="name">Name</label>
+    <input type="text" name="name" />
+
+    <br />
+
+    <label for="propellers">Propellers</label>
+    <input type="text" name="propellers" />
+
+    <br />
+
+    <label for="maxSpeed">maxSpeed</label>
+    <input type="text" name="maxSpeed" />
+
+    <br />
+
+    <button>Create</button>
+
+  </form>
+
+</div>
